Perkin-UAT/force-app/main/default/objects/Partner_Site__c/Partner_Site__c.object-meta.xml
<CustomObject>
    <description>Used to house Payer, Bill-To, Ship-To records from SAP</description>
    <label>Partner Site</label>
    <nameField>
        <displayFormat>Site-{000000000}</displayFormat>
        <label>Account Site Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>