Perkin-UAT/force-app/main/default/objects/Partner_Site__c/fields/PKI_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>PKI SAP Customer Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>