Perkin-UAT/force-app/main/default/objects/Partner_Site__c/fields/PKI_SAP_Function__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Function__c</fullName>
    <label>PKI SAP Function</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>