Perkin-UAT/force-app/main/default/objects/Partner_Site__c/fields/PKI_SAP_Local_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Local_Country_Code__c</fullName>
    <label>PKI SAP Local Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>