Perkin-UAT/force-app/main/default/objects/Partner_Site__c/fields/PKI_SAP_Local_Name_1__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Local_Name_1__c</fullName>
    <label>PKI SAP Local Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>