Perkin-UAT/force-app/main/default/objects/Partner_Site__c/fields/PKI_SAP_Local_Version_of_Partner__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Local_Version_of_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PKI SAP Local Version of Partner</label>
    <referenceTo>Partner_Site__c</referenceTo>
    <relationshipLabel>English Version of Partner</relationshipLabel>
    <relationshipName>Local_Version_of_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>