Perkin-UAT/force-app/main/default/objects/Partner_Site__c/fields/PKI_SAP_Name_4__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Name_4__c</fullName>
    <label>PKI SAP Name 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>