Perkin-UAT/force-app/main/default/objects/Partner_Site__c/fields/PKI_SAP_Region__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Region__c</fullName>
    <label>PKI SAP Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>