Perkin-UAT/force-app/main/default/objects/Partner_Site__c/fields/PKI_SAP_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Sales_Org__c</fullName>
    <label>PKI SAP Sales Org</label>
    <length>10</length>
    <type>Text</type>
</CustomField>