Perkin-UAT/force-app/main/default/objects/Partner_Site__c/fields/PKI_SAP_Telephone__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Telephone__c</fullName>
    <label>PKI SAP Telephone</label>
    <type>Phone</type>
</CustomField>