Perkin-UAT/force-app/main/default/objects/Partner_Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>PKI_SAP_Name_1__c</columns>
    <columns>PKI_SAP_Name_2__c</columns>
    <columns>PKI_SAP_Customer_Number__c</columns>
    <columns>PKI_SAP_Function__c</columns>
    <columns>PKI_SAP_Street__c</columns>
    <columns>PKI_SAP_City__c</columns>
    <columns>PKI_SAP_Region__c</columns>
    <columns>PKI_SAP_Postal_Code__c</columns>
    <columns>PKI_SAP_Country_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>